(#58) Styling table: fixed row selecton is not visible

--- a/themes/default.theme/css/theme.css
+++ b/themes/default.theme/css/theme.css
@@ -10077,7 +10077,7 @@ td.ax-amount {
   padding-bottom: 0 !important;
 }
 
-.table-widget tr[data-table-selection] > td {
+.table-widget tbody > tr[data-table-selection] > td {
   color: white;
   background: #92bce0;
 }
